TAG: qcreports_db-5-1-7-3
DATE: 1/28/2014
STAFF: sc
CHANGES: TR11507
1) GXD_AssayInIndexNotInCache.py - exclude Nuclease S1 and RNase protection 
2) GXD_FullCodeGene.sql - exclude RNAse prot (74727) and S1 nuc (74726) 
CHANGES: TR11347
1) GXD_FullCodeable.py - removed OMIM column (and queries) from report 1
2) weekly/GXD_FullCodeableIndexed.py - removed OMIM column (and queries)
CHANGES: TR11543 - updated TS 27/28 min/max values in db
1) GXD_SpecNoAge.sql - add exclusion of TS 27 when querying for InSitu 
    and Gel Lanes where age like 'postnatal%'.
2) RECOMB_SpecNoAge.sql - add exclusion of TS 27 when querying for InSitu 
    where age like 'postnatal%'. 
3) GXD_SpecTheilerAge.py - made a note about TS 27/28 max/min changing in the db

TAG: qcreports_db-5-1-7-2
DATE: 1/27/2014
STAFF: sc
CHANGES: TR11468, US175
1) GXD_EMAPS_MappingAdUnmappedChecks.py - include CRE

TAG: qcreports_db-5-1-7-1
DATE: 1/22/2014
STAFF: oblod
CHANGES: TR11468
Added QC reports for EMAPA/S mapping table.

TAG: qcreports_db-tr11515-BP
DATE: 12/31/2013
STAFF: lec
CHANGES: 
1) branch point tag for TR11515/allele stuff

TAG: qcreports_db-5-1-6-4
DATE: 12/06/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/12/09/2013 to exclusion list

TAG: qcreports_db-5-1-6-3
DATE: 12/02/2013
STAFF: lec
CHANGES: 
a) TR11457/weekly/PHENO_Images.py

TAG: qcreports_db-5-1-6-2
TAG: qcreports_db-5-1-6-1
DATE: 11/25/2013
STAFF: lec
CHANGES: 
a) TR11544/weekly/ALL_MolNotesNoMP.py : add more excluded J:'s
b) TR11104/monthly/ALL_RefCounts.py : new/for Steve Rockwood

TAG: qcreports_db-5-1-5-6
DATE: 11/18/2013
STAFF: lec
CHANGES: TR11522/
moved 'ALL_Notes.py' from monthly to weekly

TAG: qcreports_db-5-1-5-5
DATE: 11/18/2013
STAFF: lec
CHANGES: TR11253
mgd/PRB_StrainByDate.sql: add 'mberry'/11/19/2013 to exclusion list

TAG: qcreports_db-tr11468
DATE: 11/08/2013
STAFF: ob
CHANGES: TR11468
Branch point tag for TR11468

TAG: qcreports_db-5-1-5-4
DATE: 10/07/2013
STAFF: lec
CHANGES: TR11253